--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- Image with Caption -->
     <h2>Marvel Logo</h2>
-    <img src="https://example.com/marvel-logo.png" alt="Marvel Logo" width="200"> <!-- Image with URL -->
+    <img src="https://raw.githubusercontent.com/Wasif00710/Home-Task-2/main/pngwing.com.png" alt="Marvel Logo" width="200"> <!-- Image with URL -->
     <p><i>Image Source: Marvel Studios</i></p>
 
     <!-- Table with Row Span and Col Span -->
