--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             margin: 20px 0; /* Adds vertical margin */
         }
         blockquote {
-            text-align: center; /* Center-aligns the blockquote text */
+            text-align: left; /* Center-aligns the blockquote text */
             font-style: italic; /* Italic style for blockquote */
             margin: 20px auto; /* Margin for spacing */
             padding: 10px; /* Padding for blockquote */
